# PetRunner

./: .gitignore  .npmignore  AGENTS.md  CONCEPTS.md  Cargo.toml  LICENSE  Package.resolved  Package.swift  README.md  STRATEGY.md  THIRD_PARTY_NOTICES.md  package.json  rust-toolchain.toml
.codex/environments/: environment.toml
.github/workflows/: publish-packages.yml  release.yml  windows-release.yml
Assets/: AppIcon.icns
DashboardWeb/: index.html  vite.config.ts  vitest.config.ts
DashboardWeb/src/: analytics.tsx  api.ts  data.test.ts  data.ts  format.ts  icons.tsx  main.tsx  monitor.tsx  pet-preview.tsx  pets.tsx  routing.test.ts  routing.ts  styles.css  types.ts
Sources/CPetRunnerBridge/: module.modulemap
Sources/PetRunner/: AgentMonitorBridge.swift  AppDelegate.swift  BudgetNotificationController.swift  CLISetup.swift  CLISetupCommand.swift  CursorAppAuthStore.swift  CursorUsageClient.swift  DashboardAPIController.swift  DashboardWindowController.swift  LocalDashboardServer.swift  MonitorSetupWindowController.swift  OverlayPanelController.swift  PixelTextView.swift  Preferences.swift  ProviderAccountReader.swift  ProviderHookInstaller.swift  QuickActionsMenuController.swift  SessionBubblePanelController.swift  SingleInstanceCoordinator.swift  SpriteView.swift  StackedBubbleBackgroundView.swift  StatusMenuController.swift  UsageCoordinator.swift  main.swift
Sources/PetRunnerCore/: AgentMonitor.swift  (+23 more)
StoreAssets/: STORE_LISTING_EN-US.md  STORE_LISTING_VI-VN.md
Support/: Info.plist  Package.runtime.swift
docs/: RUN_LOCAL.md
lib/: cli.js  prompt.js  setup.js
rust/crates/petrunner-bridge/: Cargo.toml  build.rs
rust/crates/petrunner-bridge/src/: lib.rs
rust/crates/petrunner-core/: Cargo.toml
rust/crates/petrunner-core/src/: animation.rs  atlas.rs  lib.rs  monitor.rs  pet.rs  physics.rs
rust/crates/petrunner-core/tests/: pet_package_contract.rs
script/: build_and_run.ps1  build_and_run.sh  bump_version.mjs  generate_app_icons.sh  package_macos_release.sh  package_windows.ps1  package_windows_msix.ps1  test_macos.sh
test/: bump_version.test.js  cli.test.js  setup.test.js
windows/native/: CMakeLists.txt  CMakePresets.json  vcpkg.json
windows/native/include/petrunner/: core.hpp
windows/native/src/: core.cpp  main.cpp
windows/native/tests/: core_tests.cpp
(+69 files in other folders)
