[package]
name = "petrunner-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
petrunner-core = { path = "../petrunner-core" }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
cbindgen = "0.29.2"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = "warn"
pedantic = "warn"
module_name_repetitions = "allow"
