[package]
name = "petrunner-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["png", "webp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
rusqlite = { version = "0.38.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
